Eforce - Personal Dev/src/objects/Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <formula>Hospital__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Text(NonHospital__r.Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>TEXT( Hospital__r.District__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Non_Doctor_Id__c</fullName>
        <formula>NonHospital__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doctor/Non Doctor Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HospitalId__c</fullName>
        <formula>Hospital__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HospitalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <label>Hospital</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Doctor / Non-Doctor</relationshipLabel>
        <relationshipName>Affiliation1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows the Primary Hospital For Doctor</description>
        <label>IsPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NonHospital__c</fullName>
        <description>Cognizant: Used to associate doctors or non doctors with the hospital</description>
        <label>Doctor / Non Doctor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hospital</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <formula>Hospital__r.PostCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Primary Account Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT( Hospital__r.State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <label>Affiliation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Primary_Account</fullName>
        <active>true</active>
        <description>Used to Validate Primary Account</description>
        <errorConditionFormula>AND( 
IsPrimary__c = true , 
AND( 
ISBLANK(Hospital__r.Name)))</errorConditionFormula>
        <errorDisplayField>NonHospital__c</errorDisplayField>
        <errorMessage>Customer already has a primary Account</errorMessage>
    </validationRules>
</CustomObject>